cluster/apps/database/adminer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  namespace: database
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "db.spuxx.dev"
    secretName: spuxx.dev
  rules:
  - host: db.spuxx.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adminer
            port:
              number: 8080
